# strace-analyzer

./: .travis.yml  Cargo.toml  LICENSE  NOTICE.md  README.md  bash-completion.sh  build.sbt  rust-toolchain.toml  strace-analyzer.1  strace-analyzer.1.md  version.sbt
.github/: dependabot.yml
.github/workflows/: rust-audit-scheduled.yml  rust-audit.yml  rust.yml
src/: analysis.rs  app.rs  cli.rs  config.rs  log.rs  main.rs  output.rs  summary.rs
src/main/scala/: analysis.scala  analyzer.scala  config.scala  duration.scala  file-op-summary.scala  io-profile.scala  io.scala  log-entries.scala  main.scala  memory.scala  strace.scala  summary.scala
