[package]
name = "strace-analyzer"
version = "0.5.6"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "analyze strace output"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/wookietreiber/strace-analyzer"
homepage = "https://github.com/wookietreiber/strace-analyzer"
repository = "https://github.com/wookietreiber/strace-analyzer"
keywords = ["strace"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1"
bytesize = "2"
regex = "1"

[dependencies.clap]
version = "4"
features = ["cargo", "deprecated", "wrap_help"]

[dependencies.prettytable-rs]
version = "0.10"
optional = true
default-features = false

[features]
default = ["table"]
table = ["prettytable-rs"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
